# Compilation-principle

./: CMakeLists.txt  Dockerfile  README.md  judge.toml  main.cpp
headers/: antiPolandExp.h  grammarAnalysis.h  judgeLetter.h  lexicalAnalysis.h
impl/: antiPolandExp.cpp  grammarAnalysis.cpp  judgeLetter.cpp  lexicalAnalysis.cpp
